# 2023-compiler-lab

./: .gitmodules  README.md
01-algorithm/01-nfa-from-regexp/src/: algo.cpp  nfa_from_regexp.hpp  test.cpp
01-algorithm/01-reg2nfa/: makefile
01-algorithm/01-reg2nfa/src/: main.cpp  nfa_from_regexp.hpp
01-algorithm/02-nfa-to-dfa/: makefile
01-algorithm/02-nfa-to-dfa/src/: main.cpp  nfa_to_dfa.cpp  nfa_to_dfa.hpp  test.cpp
01-algorithm/02-nfa2dfa/: makefile
01-algorithm/02-nfa2dfa/src/: main.cpp  test.cpp
01-algorithm/03-lrk&lf/: lrk.pseudo
01-algorithm/03-lrk&lf/src/: lf.cpp  lrk.cpp
01-algorithm/03-lrk-lf/src/: lf.cpp  lrk.cpp  lrk.h
01-algorithm/common/: CFG.hpp  SymbolAllocator.hpp  SymbolSet.hpp
02-gcc-sysy/learn-gcc/: makefile
02-gcc-sysy/learn-sysy/examples/: array.sy.c  fib.sy.c  (+3 more)
lab01-algorithm/01-reg2nfa/: test.reg  test.regex
lab01-algorithm/02-nfa2dfa/: input.txt  makefile
lab01-algorithm/03-cfg-trans/: main.cpp  makefile
lab01-algorithm/04-first-follow/: makefile
lab01-algorithm/common/: CFG.hpp  CfgParser.hpp  SymbolSet.hpp  comm.hpp
lab03-lexer/: Cargo.toml  examples  text.c
lab03-lexer/bad-sample/: illegal_digit.sy.c  illegal_token.sy.c  too_big.sy.c
lab03-lexer/exmaples/: from-lab02  inc.sy.c  unexpected_char.sy.c
lab03-lexer/src/: error.rs  lex.rs  main.rs  parser.rs  span.rs  tokens.rs
sysy-sample/: arr_defn4.sy.c  comment1.sy.c  comment2.sy.c  const_defn.sy.c  continue.sy.c  domain_test.sy.c  func_test1.sy.c  less_eq.sy.c  var_defn2.sy.c  while_test3.sy.c
ycc/: Cargo.toml  README.md
ycc/syntax/: sysy.ebnf
(+59 files in other folders)
