[package]
name = "lab03-lexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.3", features = ["alloc"] }
nom_locate = "4.2.0"
phf = { version = "0.11.2", features = ["macros"] }
thiserror = "1.0.50"
